# SmallGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: Application.cpp  Application.h  EngineTime.cpp  EngineTime.h  Time.h  Window.cpp  main.cpp
src/Input/: ActionMap.h  ActionState.cpp  ActionState.h  Actions.h  Input.cpp  Input.h  KeyMap.cpp  KeyMap.h  Keys.h
src/Systems/: EngineCore.cpp  EngineCore.h
src/Systems/DebugSystem/: DebugSystem.cpp  DebugSystem.h
src/Systems/EngineInputHandling/: EngineInputShortcuts.cpp  EngineInputShortcuts.h  InputSystem.cpp  InputSystem.h
src/Systems/Rendering/: RenderSystem.cpp  RenderSystem.h
src/Systems/WindowHandling/: ToggleFullscreen.cpp  ToggleFullscreen.h  Window.cpp  Window.h  WindowSystem.cpp  WindowSystem.h
